feature: basic functionality, needs massive cleanup

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 
+    compileOnly "com.fasterxml.jackson.core:jackson-databind:2.9.7"
+    compileOnly "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.7"
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
 
